LU-1291 mds: Test failure on test suite replay-single 44c

The mds_lov cleanup in mds_precleanup and not protect by
mds's reference. So we may access a invalid mds_lov in some
case. Just defer cleanup the mds_lov in mds_cleanup to
insure it protect under mds's reference.

Signed-off-by: yang sheng <ys@whamcloud.com>
Change-Id: Icb856b2a2b135711fd5681b0b4ebef0a1d78b988